--- a/registration/src/main/resources/templates/home.html
+++ b/registration/src/main/resources/templates/home.html
@@ -62,7 +62,7 @@
 				</tbody>
 			</table>
 		</div>
-		<h4><a th:href="@{/createEmployee}">Ajouter un nouvel employée</a></h4>
+		<h4><a th:href="@{/registreUser}">Ajouter un nouvel employée</a></h4>
 
 	</div>
 	
